- fixed memory leak when setting new wxMask for wxBitmap
- improved border handling so it no longer shows a thin and
  sunken border under XP
- partial fix for wxNotebook pages looking bad under XP: wxUSE_UXTHEME
  enables XP theme engine code, and wxUSE_UXTHEME_AUTO tells
  wxWindows to use the theme tab colour for control backgrounds.
  Proper XP theme support is planned for 2.6

wxMotif:

- don't use stipples in DoDrawText

wxUniv:

- fixed refresh problem when message box is shown

wxMac:

- implement wxExecute with proper callback on Mac OS X

wxHTML:

- fixed parsing of CDATA tags (Bill Nalen)
- content of <script> tags is not displayed anymore
- added wxHtmlWindow::LoadFile
- added SetFonts methods to wxHtmlDCRenderer and wxHtmlPrintout classes
- 'sizes' argument to SetFonts can now be NULL to use default font sizes
  (both by Adrian Philip Look)
- it is now possible to force page break when printing by inserting
  <div style="page-break-before:always"> into the markup (Greg Chicares)

wxXRC:

- wxrc fixes: fixed compilation of wxBitmap, wxIcon toplevel
  nodes; fixed wxrc when using -o dirname/filename
- wxToolBar handler now supports all wxToolBar's features
- <object_ref> handling was fixed
- loading of resources specified using relative file names was fixed
- added wxSplitterWindow and wxWizard support

2.4.0
-----

wxMSW:

- fixed loss of client data in wxChoice::SetString()

wxGTK:

- fixed wxMenu::Remove (John Skiff and Benjamin Williams)

All:

- Improved contrib/utils/convertrc parsing (David J. Cooke)
- Fixed handling of URLs and filenames in wxFileSystem
- Implemented alignment for wxGrid bool editor and renderer

2.3.4
-----

All:

- added (partial) Indonesian translations (Bambang Purnomosidi D. P.)
- added wxSizer::Show()/Hide() (Carl Godkin)
- fixed bugs in wxDateTime::SetToWeekDay()/GetWeek()

Unix (Base/GUI):

- minor OpenBSD compilation/linking fixes, now builds OOB under OpenBSD 3.1